1.62 2022-08-10 rurban
----
  * Exec: compile with USE_THREADS and USE_ITHREADS (GH #17)

1.61 2022-06-13 rurban
----
  * perfilter.pod: minor improvements (PR #16 khw)
  * Remove runtime recommends META (GH #14 kentfredric)
  * use strict in all modules. Fixes Test::Kwalitee.
  * Add github actions, and cirrus CI's
  * Updated Copyright years.

1.60 2020-08-05 rurban
----
  * Increase t/call.t verbosity on failures (PR #12 aatomic)
  * Push cwd to @INC for PERL_CORE (PR #11 jkeenan)
  * Update search.cpan.org link to metacpan (PR #10 Grinnz)

1.59 2018-08-04 rurban
----
  * Improve tests using FindBin for filter-util.pl [atoomic #9]
  * Added new m4 filter [werner lemberg #8]
  * Add int casts, assert on 2GB limitation.

1.58 2017-11-15 rurban
----
  * Drop 5.005 support
  * Switch from DynaLoader to XSLoader [atoomic #5]
  * Replace use vars by our. [atoomic #5]
  * Lazy load Carp only when required. [atoomic #5]
  * Minor test improvements
  * Fix v5.8 cast warnings

1.57 2017-01-22 rurban
----
  * Todo the t/exec.t test 2 on cygwin.
  * Fixed/Todo the t/decrypt.t test 7 utf8 failures.
    Skip with non UTF-8 locale.

1.56 2017-01-20 rurban
----

  * add binmode to the decrypt/encr,decrypt sample scripts
  * add utf8-encoded testcase to t/decrypt.t [cpan #110921]. use -C
  * stabilized some tests, add diag to sometimes failing sh tests
  * moved filter-util.pl to t/
  * fixed INSTALLDIRS back to site since 5.12 [gh #2]
  * fixed exec/sh test races using the same temp. filenames
  * reversed this Changes file to latest first
  * added Travis CI

1.55 2015-07-26 rurban
----

  * Fix t/z_pod-coverage.t with old Test::More by Kent Frederik. RT #106090.
  * Fix t/tee.t + t/order.t race under parallel testing. RT #105396.
    Thanks to Kent Frederik
  * Fix Filter exec refcount, breaking earlier parse exits with __DATA__ RT #101668
    Thanks to user42_kevin@yahoo.com.au
  * Add missing filter_del in exec filter.