@@ -4,7 +4,7 @@ use Filter::Util::Exec ;
 use strict ;
 use warnings ;
 
-our $VERSION = "1.61" ;
+our $VERSION = "1.62" ;
 
 sub import
 {
