@@ -1,6 +1,7 @@
 1.62 2022-08-10 rurban
 ----
   * Exec: compile with USE_THREADS and USE_ITHREADS (GH #17)
+  * add a make release target
 
 1.61 2022-06-13 rurban
 ----
